pattern-wishcast/tests/ui/upcast_mut_unsound.stderr
error[E0599]: no method named `to_partial_mut` found for enum `Value` in the current scope
  --> tests/ui/upcast_mut_unsound.rs:36:48
   |
6  | / pattern_wishcast! {
7  | |     // Define a base value enum that can be None or Some
8  | |     enum Value is <P: PatternFields> = {
9  | |         None,
...  |
21 | |     impl CompleteValue : PartialValue;
22 | | }
   | |_- method `to_partial_mut` not found for this enum
...
36 |       let partial_mut: &mut PartialValue = complete.to_partial_mut();
   |                                                     ^^^^^^^^^^^^^^
   |
help: there is a method `to_partial` with a similar name
   |
36 -     let partial_mut: &mut PartialValue = complete.to_partial_mut();
36 +     let partial_mut: &mut PartialValue = complete.to_partial();
   |

warning: unreachable statement
  --> tests/ui/upcast_mut_unsound.rs:55:2
   |
46 | /     match complete {
47 | |         CompleteValue::Some(n) => {
48 | |             println!("Value: {}", n);
49 | |             return;
...  |
53 | |     }
   | |_____- any code following this `match` expression is unreachable, as all arms diverge
54 |
55 |       unreachable!("Should not be possible to reach this");
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable statement
   |
   = note: `#[warn(unreachable_code)]` on by default
